--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ plac==0.9.6
 preshed==2.0.1
 pycparser==2.20
 pyOpenSSL==19.1.0
-pysbd==0.2.3
 PySocks==1.7.1
 pyspellchecker==0.5.2
 python-dateutil==2.8.1
@@ -25,9 +24,10 @@ regex==2020.4.4
 requests==2.23.0
 six==1.14.0
 spacy==2.0.16
+syntok==1.2.2
 thinc==6.12.1
 toolz==0.10.0
-tqdm==4.44.1
+tqdm==4.45.0
 ujson==2.0.3
 urllib3==1.25.8
 wrapt==1.10.11
