Add SymSpell to conda file
* Update pip usage with conda. requirements.txt are not used anymore
* Delete requirements.txt

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,12 @@
 name: hipe
 dependencies:
-  - python
+  - python>=3.7
   - numpy
   - pandas
   - spacy
-  - cogsci::pyspellchecker 
+  - cogsci::pyspellchecker
+  - conda-forge::hunspell
+  - pip
+  - pip:
+    - syntok
+    - symspellpy
