Huge update, see details
* Add v1.2 training/dev data
* Use sm and md models while training
* Add trained_models/
* Add preprocessing with CLI spacy convert
* Update gitignore for trained_models/

--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,16 @@ name: hipe
 dependencies:
   - python>=3.7
   - numpy
+  - click # command line arguments parsing
   - pandas
-  - spacy
+  - spacy=2.2.4
+  - python-Levenshtein
+  - dask # parallel processing
+  - ipykernel # for jupyter notebook conda env support
   - cogsci::pyspellchecker
   - conda-forge::hunspell
   - pip
   - pip:
     - syntok
     - symspellpy
+    - Wikidata
