--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+trained_models/
 # Created by https://www.gitignore.io/api/macos,python,pycharm,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=macos,python,pycharm,jupyternotebooks
 
